--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -1,5 +1,6 @@
+import { Link } from "@/shared/ui/link/link";
+
 import { Divider } from "@/shared/ui/divider/divider";
-import Link from "next/link";
 
 export const metadata = {
   title: "Documentation: Introduction - SafeHeaders",
@@ -28,7 +29,7 @@ This documentation serves as a quick reference for **experienced developers and 
 
 ## How to Use the Documentation?
 
-If you're new to HTTP headers and **unfamiliar with their role in security**, we recommend starting with the <Link className="text-cyan-400 font-medium hover:underline focus-visible:underline" href="/docs/headers">Headers</Link> section. This section provides a comprehensive introduction to **security-related headers**, explaining their functions and importance.
+If you're new to HTTP headers and **unfamiliar with their role in security**, we recommend starting with the <Link href="/docs/headers">Headers</Link> section. This section provides a comprehensive introduction to **security-related headers**, explaining their functions and importance.
 
 You can further explore the content through **practical examples and instructional videos**, which will deepen your understanding and help you apply this knowledge effectively.
 
