--- a/src/app/docs/headers/Referrer-Policy/page.mdx
+++ b/src/app/docs/headers/Referrer-Policy/page.mdx
@@ -1,3 +1,3 @@
-import Link from "next/link";
+import { Link } from "@/shared/ui/link/link";
 
-This part of documentation is work in progress. If you would like to help, please check the <Link className="text-cyan-400 font-medium hover:underline focus-visible:underline" href="/docs/getting-started/Contributing">contributing guide</Link>.
+This part of documentation is work in progress. If you would like to help, please check the <Link href="/docs/getting-started/Contributing">contributing guide</Link>.
