:art: codestyle(themes.css): Added new styles for the code element.

--- a/src/app/docs/getting-started/Contributing/page.mdx
+++ b/src/app/docs/getting-started/Contributing/page.mdx
@@ -31,14 +31,7 @@ git clone https://github.com/perquis/safe-headers.com.git
 
 </div>
 
-<div className="flex flex-col gap-5">
-4. **Install Dependencies**: Navigate to the project directory and install the required dependencies with:
-
-```sh
-npm install
-```
-
-</div>
+4. **Install Dependencies**: Navigate to the project directory and install the required dependencies with: `npm install{:sh}`
 
 </ol>
 
