:memo: docs(Updated these files by adding metadata and updating documentation.):

--- a/src/app/docs/getting-started/Contributing/page.mdx
+++ b/src/app/docs/getting-started/Contributing/page.mdx
@@ -4,7 +4,8 @@ import { Divider } from "@/shared/ui/divider/divider";
 
 export const metadata = {
   title: "Documentation: Contributing - SafeHeaders",
-  description: "Welcome to the SafeHeaders documentation!",
+  description:
+    "Find out how you can help enhance our platform, from editing existing notes to adding new content on the site, with all your changes approved through our authorization process.",
 };
 
 # Let’s Create Notes Together!
