--- a/src/app/docs/getting-started/Installation/page.mdx
+++ b/src/app/docs/getting-started/Installation/page.mdx
@@ -4,6 +4,12 @@ import { Badge } from "@/shared/ui/badge/badge";
 
 import { Divider } from "@/shared/ui/divider/divider";
 
+export const metadata = {
+  title: "Documentation: Installation - SafeHeaders",
+  description:
+    "In this simple guide, we'll show you how to install our project, so you can later implement a new note.",
+};
+
 # What is SafeHeaders CLI?
 
 We’ve developed a **CLI tool** that enables you to **achieve the same results** without having to visit our website.
@@ -12,6 +18,7 @@ We’ve developed a **CLI tool** that enables you to **achieve the same results*
   <Badge>Windows</Badge>
   <Badge>Ubuntu</Badge>
   <Badge>MacOS</Badge>
+  <Badge color="amber">Work in progress</Badge>
 </div>
 
 <Divider className="my-5 !border-zinc-800" />
