--- a/src/app/docs/getting-started/Supporting/page.mdx
+++ b/src/app/docs/getting-started/Supporting/page.mdx
@@ -1,3 +1,43 @@
-import { Link } from "@/shared/ui/link/link";
+import { Divider } from "@/shared/ui/divider/divider";
 
-This part of documentation is work in progress. If you would like to help, please check the <Link href="/docs/getting-started/Contributing">contributing guide</Link>.
+export const metadata = {
+  title: "Documentation: Supporting - SafeHeaders",
+  description:
+    "By contributing to our support section, you help drive our growth and cover the essential maintenance costs of our platform.",
+};
+
+# Support Our Work
+
+If you feel that our materials have helped **improve the security** of your application or **contributed to your knowledge** in this area, we encourage you to support our service.
+
+<Divider className="my-5 !border-zinc-800" />
+
+## Why Should You Support Us?
+
+Supporting us helps in multiple ways:
+
+<ol>
+1. **Keep Our Services Running**: Your contributions help cover server maintenance costs, ensuring that our platform remains accessible and reliable for everyone.
+
+2. **Fuel Further Development**: With your support, we can continue to enhance our resources, develop new features, and expand our educational content to help you stay ahead in application security.
+
+3. **Empower the Community**: By supporting us, you’re investing in a project that aims to provide valuable knowledge and tools for developers and security enthusiasts worldwide.
+
+</ol>
+
+Every contribution, big or small, helps us continue our mission to create a safer online environment. Thank you for considering supporting us!
+
+<Divider className="my-5 !border-zinc-800" />
+
+## How Can You Support Us?
+
+To support us, simply visit our GitHub page with a direct link to our repository. There, you'll find a **Sponsor** button.
+
+Through this service, you can support us via a secure and legitimate platform, choose any amount you wish to contribute, and stop your support at any time.
+
+<img
+  className="pointer-events-none w-full select-none overflow-hidden rounded-lg"
+  src="https://miro.medium.com/v2/resize:fit:2000/1*_Xd1lb-vlie1wuzGytIjVg.png"
+/>
+
+Your support makes a big difference, and we greatly appreciate it!
