--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -1,5 +1,7 @@
 import { Link } from "@/shared/ui/link/link";
 
+import { Badge } from "@/shared/ui/badge/badge";
+
 import { Divider } from "@/shared/ui/divider/divider";
 
 export const metadata = {
@@ -30,6 +32,8 @@ This documentation serves as a quick reference for **experienced developers and 
 ## How to Use the Documentation?
 
 If you're new to HTTP headers and **unfamiliar with their role in security**, we recommend starting with the <Link href="/docs/headers">Headers</Link> section. This section provides a comprehensive introduction to **security-related headers**, explaining their functions and importance.
+
+Occasionally, you may come across a badge labeled <Badge color="amber">Work in progress</Badge> in the documentation. This indicates that **the subpage is still under development** and not yet complete, meaning the provided examples or tools might not function as intended.
 
 You can further explore the content through **practical examples and instructional videos**, which will deepen your understanding and help you apply this knowledge effectively.
 
